--- a/src/assets/css/main.styl
+++ b/src/assets/css/main.styl
@@ -1,6 +1,75 @@
+$bezier = cubic-bezier(0.68, 0, 0.265, 1);
+
 #bk-scoped
-    box-sizing border-box
+    *
+        box-sizing border-box
 
     body 
         margin 0
         padding 0
+
+        .page-wrap
+            padding 20px
+            @media screen and (max-width 767px)
+                padding 10px
+
+            .book-list-wrapper
+                box-shadow 2px 2px 2px 2px #d8d8d8
+                padding 10px
+                width 100%
+                max-width 900px
+                display flex
+                overflow auto
+                margin 0 auto
+
+                @media screen and (max-width 1279px)
+                    flex-wrap wrap
+
+                .book-card-wrap
+                    min-width 33.3333%
+                    padding 10px
+
+                    @media screen and (max-width 1279px)
+                        min-width auto
+                        width 33.3333%
+
+                    @media screen and (max-width 767px)
+                        width 50%
+                        padding 5px
+
+                    .book-card
+                        border 2px solid #f4f4f4
+                        border-radius 6px
+                        padding 20px
+                        height 100%
+
+                        @media screen and (max-width 767px)
+                            padding 10px
+
+                        .image-wrap
+                            width 100%
+                            padding-bottom 120%
+                            position relative
+                            overflow hidden
+
+                            .bg-image
+                                position absolute
+                                top 0
+                                left 0
+                                width 100%
+                                height 100%
+                                background-size cover
+                                background-position center 
+                                transition all 0.2s $bezier
+
+                        .title-wrap
+                            padding 20px 0 0
+
+                            .text
+                                @media screen and (max-width 767px)
+                                    font-size 14px
+
+                    &:hover
+                        .image-wrap
+                            .bg-image
+                                transform scale(1.1)
